--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
   "name": "to-do-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/loader.js",
   "repository": "https://github.com/LeandroSombra/to-do-api.git",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon",
+    "production": "pm2 start src/loader.js --name todo-app"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.10",
+    "node-restful": "^0.2.6",
+    "pm2": "^4.5.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
